--- a/Droid/Resources/layout/Main.axml
+++ b/Droid/Resources/layout/Main.axml
@@ -1,4 +1,58 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
-    <Button android:id="@+id/myButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hello" />
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/PickupRequestsButton"
+        android:text="@string/pickupRequests"
+        style="@android:style/TextAppearance.DeviceDefault.Large" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/StartLegHereButton"
+        style="@android:style/TextAppearance.DeviceDefault.Large"
+        android:text="@string/startLegHere" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/StartLegAtAddressButton"
+        android:text="@string/startLegAtAddress" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/LegStateTextView"
+        style="@android:style/TextAppearance.DeviceDefault.Large" />
+    <Space
+        android:layout_width="357.5dp"
+        android:layout_height="100.0dp"
+        android:id="@+id/space2" />
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/space1" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ManageLegsButton"
+        android:text="@string/manageLegs" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/DriverInfoButton"
+        android:text="@string/infoForDriver" />
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="46.0dp"
+        android:id="@+id/space3" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/SwitchUserButton"
+        android:text="@string/switchUser" />
 </LinearLayout>
