--- a/Droid/Resources/layout/LegManager.axml
+++ b/Droid/Resources/layout/LegManager.axml
@@ -1,3 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="vertical"
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/linearLayout1" >
+        <ExpandableListView
+            android:minWidth="25px"
+            android:minHeight="25px"
+            android:layout_width="match_parent"
+            android:layout_height="413.0dp"
+            android:id="@+id/LegManagerListView" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/EditLegButton"
+            android:text="@string/editLeg" />
+    </LinearLayout>
 </LinearLayout>
