--- a/Droid/Resources/layout/StartLegAtAddress.axml
+++ b/Droid/Resources/layout/StartLegAtAddress.axml
@@ -1,3 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
+    <TextView
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minWidth="25px"
+        android:minHeight="25px"
+        android:id="@+id/textView1"
+        android:text="Start Leg At" />
+    <EditText
+        android:inputType="textPostalAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/StartLegAddressField"
+        android:hint="Enter street address at which to begin leg." />
+    <Button
+        android:text="Start Leg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/StartLegButton" />
 </LinearLayout>
