Basic structure for server connection info: * Added class structure and UI layouts for authentication and storing server info. * Also fixed issue that was causing the app to repeatedly keep trying to connect even with the dialog displayed.

--- a/DriverTracker.Mobile.Droid/Resources/layout/ChooseServer.axml
+++ b/DriverTracker.Mobile.Droid/Resources/layout/ChooseServer.axml
@@ -1,3 +1,34 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
+	<TextView
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:id="@+id/textView1"
+		android:text="@string/companyName" />
+	<EditText
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/companyNameField" />
+	<TextView
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/textView2"
+		android:text="@string/hostname" />
+	<EditText
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/hostnameField" />
+	<Space
+		android:layout_width="match_parent"
+		android:layout_height="271.5dp"
+		android:id="@+id/space1" />
+	<Button
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/continueButton"
+		android:text="@string/continueStr" />
 </LinearLayout>
