--- a/DriverTracker.Mobile.Droid/Resources/layout/Authenticate.axml
+++ b/DriverTracker.Mobile.Droid/Resources/layout/Authenticate.axml
@@ -12,22 +12,22 @@
         android:minWidth="25px"
         android:minHeight="25px"
         android:id="@+id/textView1" />
-    <EditText
-        android:inputType="textEmailAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/EmailAddressField" />
+	<EditText
+		android:inputType="textEmailAddress"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/emailAddressField"/>
     <TextView
         android:text="Password:"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView2" />
-    <EditText
-        android:inputType="textPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText1" />
+	<EditText
+		android:inputType="textPassword"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/passwordField" />
     <Space
         android:layout_width="match_parent"
         android:layout_height="157.5dp"
