Added activity code for choosing the server. Also removed some async voids.

--- a/DriverTracker.Mobile.Droid/Resources/layout/ChooseServer.axml
+++ b/DriverTracker.Mobile.Droid/Resources/layout/ChooseServer.axml
@@ -29,6 +29,6 @@
 	<Button
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:id="@+id/continueButton"
+		android:id="@+id/continueChooseServerButton"
 		android:text="@string/continueStr" />
 </LinearLayout>
