--- a/DriverTracker.Mobile.Droid/Resources/layout/ChooseStoredServer.axml
+++ b/DriverTracker.Mobile.Droid/Resources/layout/ChooseStoredServer.axml
@@ -1,3 +1,66 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
+	<TextView
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:id="@+id/textView1"
+		android:text="@string/currentServer" />
+	<LinearLayout
+		android:orientation="horizontal"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/linearLayout2">
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:id="@+id/currentServerName"
+			android:textSize="28dp"
+			android:layout_weight="1"
+			android:text="@string/notSelected" />
+		<Button
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:id="@+id/editServerButton"
+			android:layout_weight="0"
+			android:text="@string/edit" />
+	</LinearLayout>
+	<Space
+		android:layout_width="match_parent"
+		android:layout_height="38.5dp"
+		android:id="@+id/space1" />
+	<ListView
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="373.0dp"
+		android:id="@+id/companiesList" />
+	<LinearLayout
+		android:orientation="horizontal"
+		android:minWidth="25px"
+		android:minHeight="25px"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:id="@+id/linearLayout1">
+		<Button
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:id="@+id/chooseServerButton"
+			android:layout_weight="0.5"
+			android:text="@string/chooseServer" />
+		<Button
+			android:layout_width="wrap_content"
+			android:layout_height="match_parent"
+			android:id="@+id/addNewServerButton"
+			android:layout_weight="0.5"
+			android:text="@string/addNew" />
+	</LinearLayout>
 </LinearLayout>
