fix router links

--- a/DriverTracker.Client/drivertracker/src/app/app-navbar/app-navbar.component.html
+++ b/DriverTracker.Client/drivertracker/src/app/app-navbar/app-navbar.component.html
@@ -13,10 +13,10 @@
                 <a class="nav-link" routerLink="/about">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/statistics/drivers">Driver Statistics</a>
+                <a class="nav-link" routerLink="/statistics/drivers">Driver Statistics</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/predictions/pickup">Pickup Predictions</a>
+                <a class="nav-link" routerLink="/predictions/pickup">Pickup Predictions</a>
             </li>
         </ul>
     </div>
