auth guards and login page

--- a/DriverTracker.Client/drivertracker/src/app/app.component.html
+++ b/DriverTracker.Client/drivertracker/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 
-<div class="container-fluid body-content mt-3">
+<div class="container-fluid body-content mt-3 h-100">
   <router-outlet></router-outlet>
 </div>
