--- a/DriverTracker.Client/drivertracker/src/styles.sass
+++ b/DriverTracker.Client/drivertracker/src/styles.sass
@@ -1,6 +1,6 @@
 @import "../node_modules/bootstrap/scss/functions"
 
-$theme-colors: ("primary": #dcdc00, "secondary": #b8b8b8, "warning": #ff7f00, "light": #b8b8b8, "dark": #000, "info": #53b3b4)
+$theme-colors: ("primary": #dcdc00, "secondary": #b8b8b8, "danger": #f44336, "warning": #f7ab05, "success": #7abb3d, "light": #b8b8b8, "dark": #000, "info": #25202e)
 
 $body-bg: theme-color("dark")
 $body-color: theme-color("light")
@@ -38,3 +38,6 @@ $input-plaintext-color: $body-color
 
 .navbar-light .navbar-toggler
   color: theme-color("dark")
+
+body, html
+  height: 100%
