--- a/DriverTracker.Client/drivertracker/src/app/drivers/drivers.component.html
+++ b/DriverTracker.Client/drivertracker/src/app/drivers/drivers.component.html
@@ -53,7 +53,7 @@
                                     <button type="button" class="btn btn-secondary" (click)="cancelEdit()">Cancel</button>
                                 </div>
                                 <span class="btn-group" role="group" *ngSwitchDefault>
-                                    <a class="btn btn-secondary" href="/Drivers/Details/{{driver.driverID}}">Details</a>
+                                    <a class="btn btn-secondary" routerLink="/statistics/driver/{{driver.driverID}}">Details</a>
                                     <button type="button" class="btn btn-secondary" (click)="editClicked(driver)">Edit</button>
                                     <button type="button" class="btn btn-secondary" (click)="showDeleteConfirm(content, driver)">Delete</button>
                                 </span>
